less/navigationBar.less
/* ... */
// Window Caption Buttons
.windowCaptionButtons {
  -webkit-user-select: none;
  -webkit-app-region: drag;
  height: 100%;

  .hidden {
    display: none;
  }

  .container {
    -webkit-app-region: no-drag;
  }

  button.captionButton {
    outline: none;
    vertical-align: top;
  }

  .win7 {
    margin: -13px 3px 0 0;

    button.captionButton {
      outline: 0;
      cursor: pointer;
      width: 45px;
      height: 23px;
      color: #b1acac;
      background-size: 12px 12px!important;
      background-position: center!important;
      border: 1px solid #e1e1e1;
      display: inline-block;
      padding: 12px;

      &.fullscreen {
        height:21px;
        padding:6px;
      }

      &.close-btn {
        background: url('../img/window-actions/windows/10/close-btn.svg') no-repeat;
        &:hover {
          background: url('../img/window-actions/windows/10/close-btn-white.svg') no-repeat;
          background-color: #e5182c;
        }
        &:active {
          background: url('../img/window-actions/windows/10/close-btn-white.svg') no-repeat;
          background-color: #ef717c;
        }
      }

      &.min-btn {
        border-right: 0px;
        border-bottom-left-radius: 5px;
        background: url('../img/window-actions/windows/10/min-btn.svg') no-repeat;
        &:hover {
          background-color: #e5e5e5;
        }
        &:active {
          background-color: #cacacb;
        }
      }

      &.max-btn {
        background: url('../img/window-actions/windows/10/max-btn.svg') no-repeat;
        border-right: 0px;
        &:hover {
          background-color: #e5e5e5;
        }
        &:active {
          background-color: #cacacb;
        }
        &.fullscreen {
          background: url('../img/window-actions/windows/10/max-btn-fullscreen.svg') no-repeat;
          &:hover {
            background-color: #e5e5e5;
          }
          &:active {
            background-color: #cacacb;
          }
        }
      }
    }
  }

  .win10 {
    button.captionButton {
      width: 45px;
      height: 29px;
      border: 0;
      background-color: transparent;

      &.fullscreen {
        height:21px;
      }

      &.minimize {
        &:hover {
          background-color: #e5e5e5;
        }
        &:active {
          background-color: #cacacb;
        }
        .widget {
          width: 10px;
          height: 1px;
          background: black;
          display: inline-block;
          vertical-align: middle;
        }
      }

      &.maximize {
        border-right: 0px;
        &:hover {
          background-color: #e5e5e5;
        }
        &:active {
          background-color: #cacacb;
        }
        &.fullscreen {
          &:hover {
            background-color: #e5e5e5;
          }
          &:active {
            background-color: #cacacb;
          }
          .widget {
            margin-top: 4px;

            .widget2 { display: inline-block; }
            .widget3 { display: inline-block; }
            .widget4 { display: inline-block; }
            .widget5 { display: inline-block; }
          }
        }
        .widget {
          width: 12px;
          height: 12px;
          display: inline-block;
          vertical-align: middle;

          .widget1 {
            width: 8px;
            height: 8px;
            border: 1px solid black;
            background: none;
            position: relative;
          }
          .widget2 {
            display: none;
            width: 1px;
            height: 2px;
            background: black;
            position: relative;
            top: -22px;
            left: 2px;
          }
          .widget3 {
            display: none;
            width: 10px;
            height: 1px;
            background: black;
            position: relative;
            top: -23px;
            left: 1px;
          }
          .widget4 {
            display: none;
            width: 1px;
            height: 10px;
            background: black;
            position: relative;
            top: -14px;
            left: 0px;
          }
          .widget5 {
            display: none;
            width: 2px;
            height: 1px;
            background: black;
            position: relative;
            top: -29px;
            left: 5px;
          }
        }
      }

      &.close {
        &:hover {
          background-color: #e5182c;
          .widget {
            .widget1{ background:white; }
            .widget2{ background:white; }
          }
        }
        &:active {
          background-color: #ef717c;
          .widget {
            .widget1{ background:white; }
            .widget2{ background:white; }
          }
        }
        .widget {
          width: 11px;
          height: 11px;
          display: inline-block;
          vertical-align: middle;

          .widget1 {
            width: 14px;
            height: 1px;
            background: black;
            display: inline-block;
            transform: rotate(45deg);
            position: relative;
            top: -6px;
            left: -2px;
          }
          .widget2 {
            width: 14px;
            height: 1px;
            background: black;
            display: inline-block;
            transform: rotate(315deg);
            position: relative;
            top: -21px;
            left: -2px;
          }
        }
      }
    }

  }
}
/* ... */

